<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:Amazon="http://schemas.android.com/apk/lib/com.amazon.device.ads"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/head_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="TextView"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.047" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.875">

            <LinearLayout
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/confirmed"
                    style="@style/text_style"
                    android:layout_weight="0.33"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/confirm"
                    android:textColor="@color/cardview_light_background" />

                <TextView
                    android:id="@+id/death"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/death"
                    android:textColor="@color/cardview_light_background" />

                <TextView
                    android:id="@+id/recovered"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:text="@string/recover"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/confirmno"
                    style="@style/num_style"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="TextView"
                    android:textColor="@color/cardview_light_background" />

                <TextView
                    android:id="@+id/deathno"
                    style="@style/num_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@color/cardview_light_background" />

                <TextView
                    android:id="@+id/recovno"
                    style="@style/num_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@color/cardview_light_background" />


            </LinearLayout>
        </LinearLayout>

        <com.haipq.android.flagkit.FlagImageView
            android:id="@+id/flagView"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginStart="170dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="171dp"
            android:layout_marginRight="171dp"
            android:layout_marginBottom="202dp"
            app:countryCode="US"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_country"
            app:layout_constraintVertical_bias="0.3"
            tools:src="@drawable/flag_us" />

        <com.amazon.device.ads.AdLayout
            android:id="@+id/adview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>